fix: spacing alignment (#148)
* fix: spacing alignment

* small tweaks

* moved max-width to <main>

* updated main styling

* fix: spacing on notificationpage

* fixes

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,16 @@ body {
   overflow-y: hidden;
 }
 
+.main-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+}
+
 main {
+  width: 100%;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
